fix: set breadcrumbs flex-wrap: wrap

--- a/css/style.css
+++ b/css/style.css
@@ -507,6 +507,9 @@ img {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -678,6 +681,10 @@ img {
   .navbar__search, .navbar-menu, .navbar__user {
     display: none;
   }
+  .navbar-top {
+    padding-top: 28px;
+    padding-bottom: 28px;
+  }
   .menu-button {
     display: -webkit-box;
     display: -webkit-flex;
@@ -709,8 +716,15 @@ img {
     height: 1px;
     background-color: #333333;
   }
+  .hotel {
+    padding-top: 5px;
+    padding-bottom: 20px;
+  }
   .hotel-info__text {
     width: 100%;
+  }
+  .hotel-info__stars {
+    margin-right: 16px;
   }
   .hotel-info__name {
     margin-top: 10px;
@@ -730,6 +744,7 @@ img {
     -webkit-flex-basis: 100%;
         -ms-flex-preferred-size: 100%;
             flex-basis: 100%;
+    font-weight: 700;
   }
   .hotel-wrapper {
     -webkit-box-pack: justify;
