--- a/sass/blocks/_breadcrumb.sass
+++ b/sass/blocks/_breadcrumb.sass
@@ -1,6 +1,7 @@
 .breadcrumb
   &-list
     display: flex
+    flex-wrap: wrap
     align-items: center
     padding: 18px 0
     margin: 0
